<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:stretchColumns="*">

    <ImageView
        android:id="@+id/share_campaign_qr_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_code"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/share_campaign_info1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/share_campaign_qr_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView11"
        android:gravity="center"
        android:text="@string/share_campaign_info2"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/share_campaign_copy_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:text="@string/action_copy_campaign_code"
        android:visibility="gone"/>
</RelativeLayout>