<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="*">

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/table_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/create_character_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/table_player"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/create_character_playername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:layout_column="1"
            android:layout_span="2"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"/>
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/table_XP"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/create_character_xp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"/>
        android:text="0"/>

        <TextView
            android:id="@+id/create_character_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/table_Alignment"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/create_character_alignment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:spinnerMode="dropdown"/>
    </TableRow>
</TableLayout>